--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1425,12 +1425,12 @@ pages={1037--1060},
 
 @inbook{KinBruGel96,
   author =       {Gary King and John Bruce and Andrew Gelman},
-  title =        {Racial Fairness in Legislative Redistricting},
+  chapter =      {Racial Fairness in Legislative Redistricting},
   year =         {1996},
   publisher =    {Princeton University Press},
-  editor =       {Paul E. Peterson, ed.},
+  editor =       {Paul E. Peterson},
   url =          {j.mp/Fairrace},
-  journal =      {Classifying by Race}
+  title =        {Classifying by Race}
 }
 
 @article{King96,
