--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -105,6 +105,22 @@
 % Articles
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+@Article{ImaKinRiv19,
+  author =       {Kosuke Imai and Gary King and Carlos Velasco Rivera},
+  title =        {Do Nonpartisan Programmatic Policies Have Partisan
+                  Electoral Effects? Evidence from Two Large Scale
+                  Experiments},
+  journal =      {Journal of Politics},
+  year =         {2019},
+  OPTkey =       {},
+  OPTvolume =    {},
+  OPTnumber =    {},
+  OPTpages =     {},
+  OPTmonth =     {},
+  url =          {j.mp/NonProg},
+  OPTnote =      {forthcoming},
+  OPTannote =    {}
+}
 @Article{KinLamRob17,
   author =       {Gary King and Patrick Lam and Margaret E. Roberts},
   title =        {Computer-Assisted Keyword and Document Set Discovery
