--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1971,6 +1971,18 @@ pages={1037--1060},
 % Data
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+@data{ImaKinRiv18,
+  author =       {Imai, Kosuke and King, Gary and Velasco Rivera,
+                  Carlos},
+  publisher =    {Harvard Dataverse},
+  title =        {Replication Data for: ``Do Nonpartisan Programmatic
+                  Policies Generate Partisan Electoral Effects?
+                  Evidence from Two Large Scale Experiments''},
+  year =         {2018},
+  doi =          {10.7910/DVN/70SNIS},
+  url =          {https://doi.org/10.7910/DVN/70SNIS}
+}
+  
 @data{KinSchWhi17, 
   author =       {King, Gary and Schneer, Benjamin and White, Ariel},
   publisher =    {Harvard Dataverse},
