--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -106,7 +106,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 @Article{ImaKinRiv19,
-  author =       {Kosuke Imai and Gary King and Carlos Velasco Rivera},
+  author =       {Kosuke Imai and Gary King and Velasco Rivera, Carlos},
   title =        {Do Nonpartisan Programmatic Policies Have Partisan
                   Electoral Effects? Evidence from Two Large Scale
                   Experiments},
