revised Nielsen et al cite

--- a/gk.bib
+++ b/gk.bib
@@ -8869,9 +8869,8 @@ pages={706-719}
 }
 
 @article{NieFinDav11,
-  author =       {Richard A. Nielsen and Michael G. Findley and
-                  Zachary S. Davis and Tara Candland and Daniel L.
-                  Nielson},
+  author =       {Richard Nielsen and Michael Findley and
+                  Zachary Davis and Tara Candland and Daniel Nielson},
   title =        {Foreign Aid Shocks as a Cause of Violent Armed
                   Conflict},
   journal =      {American Journal of Political Science},
