--- a/gk.bib
+++ b/gk.bib
@@ -24307,6 +24307,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
                   machine learning},
   author =       {Forman, George},
   year =         {2007},
+  url =          {bit.ly/Forman07},
   institution =  {Technical report, HP Laboratories, Palo Alto, CA}
 }
 @inproceedings{MilMonRos13,
