--- a/gk.bib
+++ b/gk.bib
@@ -25707,14 +25707,12 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {2013},
   publisher =    {Springer}
 }
-@inproceedings{KinBa15,
-  author =       {Diederik Kingma and Jimmy Lei Ba},
-  title =        {Adam: A Method for Stochastic Optimization},
-  booktitle =    {Proceedings of the International Conference on
-                  Learning Representations},
-  year =         2015,
-  organization = {International Union for the Scientific Study of
-                  Population}
+
+@article{KinBa14,
+  title={Adam: A method for stochastic optimization},
+  author={Kingma, Diederik P and Ba, Jimmy},
+  journal={arXiv preprint arXiv:1412.6980},
+  year={2014}
 }
 
 @misc{AbaAgaBar15,
@@ -25922,6 +25920,7 @@ Theory Group (Formerly: E1071), TU Wien},
   title =        {Long-term Direct and Spillover Effects of Job
                   Training: Experimental Evidence from Colombia},
   year =         2015,
+  url =          {bit.ly/KugKugS},
   howpublished = {NBER}
 }
 
@@ -25940,10 +25939,11 @@ Theory Group (Formerly: E1071), TU Wien},
 }
 
 @misc{CalDemMci14,
-  author =       {Calle, Michael and De Mel, Suresh and McIntosh,
+  author =       {Callen, Michael and De Mel, Suresh and McIntosh,
                   Craig and Woodruff, Christopher},
   title =        {What are the Headwaters of Formal Savings?
                   Experimental Evidence from Sri Lanka},
+  url =          {bit.ly/callen14},
   year =         2014,
   howpublished = {NBER}
 }
