--- a/gk.bib
+++ b/gk.bib
@@ -27563,3 +27563,127 @@ Theory Group (Formerly: E1071), TU Wien},
   year={2007},
   publisher={Cambridge University Press}
 }
+
+
+@article{AboSch15,
+  title={Economic analysis and statistical disclosure limitation},
+  author={Abowd, John M and Schmutte, Ian M},
+  journal={Brookings Papers on Economic Activity},
+  volume={2015},
+  number={1},
+  pages={221--293},
+  year={2016},
+  publisher={Brookings Institution Press}
+}
+
+@inproceedings{ChaSarSin12,
+  title={Near-optimal differentially private principal components},
+  author={Chaudhuri, Kamalika and Sarwate, Anand and Sinha, Kaushik},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={989--997},
+  year={2012}
+}
+
+@article{Dwork11,
+  title={Differential privacy},
+  author={Dwork, Cynthia},
+  journal={Encyclopedia of Cryptography and Security},
+  pages={338--340},
+  year={2011},
+  publisher={Springer}
+}
+
+@inproceedings{DwoLei09,
+  title={Differential privacy and robust statistics.},
+  author={Dwork, Cynthia and Lei, Jing},
+  booktitle={STOC},
+  volume={9},
+  pages={371--380},
+  year={2009}
+}
+
+@article{DwoSmi10,
+  title={Differential privacy for statistics: What we know and what we want to learn},
+  author={Dwork, Cynthia and Smith, Adam},
+  journal={Journal of Privacy and Confidentiality},
+  volume={1},
+  number={2},
+  year={2010}
+}
+
+@inproceedings{FriSch10,
+  title={Data mining with differential privacy},
+  author={Friedman, Arik and Schuster, Assaf},
+  booktitle={Proceedings of the 16th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={493--502},
+  year={2010},
+  organization={ACM}
+}
+
+
+@article{HefLig14,
+  title={Privacy and data-based research},
+  author={Heffetz, Ori and Ligett, Katrina},
+  journal={Journal of Economic Perspectives},
+  volume={28},
+  number={2},
+  pages={75--98},
+  year={2014}
+}
+
+@article{JiLipElk14,
+  title={Differential privacy and machine learning: a survey and review},
+  author={Ji, Zhanglong and Lipton, Zachary C and Elkan, Charles},
+  journal={arXiv preprint arXiv:1412.7584},
+  year={2014}
+}
+
+@inproceedings{Smith10,
+  title={Privacy-preserving statistical estimation with optimal convergence rates},
+  author={Smith, Adam},
+  booktitle={Proceedings of the forty-third annual ACM symposium on Theory of computing},
+  pages={813--822},
+  year={2011},
+  organization={ACM}
+}
+
+@article{WasZho10,
+  title={A statistical framework for differential privacy},
+  author={Wasserman, Larry and Zhou, Shuheng},
+  journal={Journal of the American Statistical Association},
+  volume={105},
+  number={489},
+  pages={375--389},
+  year={2010},
+  publisher={Taylor \& Francis}
+}
+
+@inproceedings{WilMcS10,
+  title={Probabilistic inference and differential privacy},
+  author={Williams, Oliver and McSherry, Frank},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={2451--2459},
+  year={2010}
+}
+
+@article{XiaWanGeh11,
+  title={Differential privacy via wavelet transforms},
+  author={Xiao, Xiaokui and Wang, Guozhang and Gehrke, Johannes},
+  journal={IEEE Transactions on Knowledge and Data Engineering},
+  volume={23},
+  number={8},
+  pages={1200--1214},
+  year={2011},
+  publisher={IEEE}
+}
+
+@article{ZhaZhaXia12,
+  title={Functional mechanism: regression analysis under differential privacy},
+  author={Zhang, Jun and Zhang, Zhenjie and Xiao, Xiaokui and Yang, Yin and Winslett, Marianne},
+  journal={Proceedings of the VLDB Endowment},
+  volume={5},
+  number={11},
+  pages={1364--1375},
+  year={2012},
+  publisher={VLDB Endowment}
+}
