--- a/gk.bib
+++ b/gk.bib
@@ -27687,3 +27687,13 @@ Theory Group (Formerly: E1071), TU Wien},
   year={2012},
   publisher={VLDB Endowment}
 }
+@article{GroBru05,
+  title =        {The art of the dummymander: The impact of recent
+                  redistrictings on the partisan makeup of southern
+                  House seats},
+  author =       {Grofman, Bernard and Brunell, Thomas L},
+  journal =      {Redistricting in the new millennium},
+  pages =        {183--99},
+  year =         {2005},
+  publisher =    {Lexington Books Lanham, MD}
+}
