--- a/gk.bib
+++ b/gk.bib
@@ -27697,3 +27697,12 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2005},
   publisher =    {Lexington Books Lanham, MD}
 }
+@article{ChoRub19,
+  title =        {Understanding Significance Tests from a Non-Mixing
+                  Markov Chain for Partisan Gerrymandering Claims},
+  author =       {Tam Cho, Wendy K and Rubinstein-Salzedo, Simon},
+  journal =      {Statistics and Public Policy},
+  pages =        {1--10},
+  year =         {2019},
+  publisher =    {Taylor \& Francis}
+}
