--- a/gk.bib
+++ b/gk.bib
@@ -27706,3 +27706,14 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2019},
   publisher =    {Taylor \& Francis}
 }
+@article{Tamas19,
+  title =        {American Disproportionality: A Historical Analysis
+                  of Partisan Bias in Elections to the US House of
+                  Representatives},
+  author =       {Tamas, Bernard},
+  journal =      {Election Law Journal: Rules, Politics, and Policy},
+  volume =       {18},
+  number =       {1},
+  pages =        {47--62},
+  year =         {2019}
+}
