--- a/gk.bib
+++ b/gk.bib
@@ -27717,3 +27717,25 @@ Theory Group (Formerly: E1071), TU Wien},
   pages =        {47--62},
   year =         {2019}
 }
+@article{GamZilBif13,
+  title =        {A survey on concept drift adaptation},
+  author =       {Gama, Jo{\~a}o and {\v{Z}}liobait{\.e}, Indr{\.e}
+                  and Bifet, Albert and Pechenizkiy, Mykola and
+                  Bouchachia, Abdelhamid},
+  journal =      {ACM computing surveys (CSUR)},
+  volume =       {46},
+  number =       {4},
+  pages =        {44},
+  year =         {2014},
+  publisher =    {ACM}
+}
+@inproceedings{TemKal18,
+  title =        {Exploring Sentence Vector Spaces through Automatic
+                  Summarization},
+  author =       {Templeton, Adly and Kalita, Jugal},
+  booktitle =    {2018 17th IEEE International Conference on Machine
+                  Learning and Applications (ICMLA)},
+  pages =        {55--60},
+  year =         {2018},
+  organization = {IEEE}
+}
