--- a/gk.bib
+++ b/gk.bib
@@ -27717,6 +27717,7 @@ Theory Group (Formerly: E1071), TU Wien},
   pages =        {47--62},
   year =         {2019}
 }
+
 @article{GamZilBif13,
   title =        {A survey on concept drift adaptation},
   author =       {Gama, Jo{\~a}o and {\v{Z}}liobait{\.e}, Indr{\.e}
@@ -27738,4 +27739,18 @@ Theory Group (Formerly: E1071), TU Wien},
   pages =        {55--60},
   year =         {2018},
   organization = {IEEE}
+}
+@Article{Lander17,
+  author =       {Eric S.\ Lander},
+  title =        {Brief for Amicus Curiae Eric S.\ Lander in support
+                  of Appellees},
+  journal =      {Gill v Whitford},
+  year =         {2018},
+  OPTkey =       {},
+  OPTvolume =    {},
+  OPTnumber =    {},
+  OPTpages =     {},
+  OPTmonth =     {},
+  OPTnote =      {585 US (2018)},
+  OPTannote =    {}
 }
