--- a/gk.bib
+++ b/gk.bib
@@ -27799,13 +27799,13 @@ Theory Group (Formerly: E1071), TU Wien},
   author =       {Eric S.\ Lander},
   title =        {Brief for Amicus Curiae Eric S.\ Lander in support
                   of Appellees},
-  journal =      {Gill v Whitford},
+  journal =      {Gill v Whitford, 585 US (2018)},
   year =         {2018},
   OPTkey =       {},
   OPTvolume =    {},
   OPTnumber =    {},
   OPTpages =     {},
   OPTmonth =     {},
-  OPTnote =      {585 US (2018)},
+  OPTnote =      {},
   OPTannote =    {}
 }
