--- a/gk.bib
+++ b/gk.bib
@@ -27800,12 +27800,5 @@ Theory Group (Formerly: E1071), TU Wien},
   title =        {Brief for Amicus Curiae Eric S.\ Lander in support
                   of Appellees},
   journal =      {Gill v Whitford, 585 US (2018)},
-  year =         {2018},
-  OPTkey =       {},
-  OPTvolume =    {},
-  OPTnumber =    {},
-  OPTpages =     {},
-  OPTmonth =     {},
-  OPTnote =      {},
-  OPTannote =    {}
-}
+  year =         2018
+  }
