--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2611,7 +2611,8 @@ pages={1037--1060},
                   You Only Know it When You See It},
   journal =      {American Journal of Political Science},
   year =         {Forthcoming},
-  author =       {Aaron Kaufman and Gary King and Mayya Komisarchik}
+  author =       {Aaron Kaufman and Gary King and Mayya Komisarchik},
+  url =          {j.mp/2u9OWrG}
 }
 
 @data{NieKin18,
