--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2602,8 +2602,7 @@ pages={1037--1060},
   title =        {Replication Data for: Why Propensity Scores Should
                   Not Be Used for Matching},
   year =         {2018},
-  doi =          {10.7910/DVN/C0DBAE},
-  url =          {https://doi.org/10.7910/DVN/C0DBAE}
+  url =          {doi.org/10.7910/DVN/C0DBAE}
 }
 
 @article {KauKinKom18,
