--- a/gk.bib
+++ b/gk.bib
@@ -27100,7 +27100,7 @@ Theory Group (Formerly: E1071), TU Wien},
                   Partisan Gerrymandering Toolkit into a Two-Part
                   Test},
   author =       {Wang, Samuel and Remlinger, Brian},
-  url =          {https://ssrn.com/abstract=3158123},
+  url =          {ssrn.com/abstract=3158123},
   year =         {2018}
 }
 @book{Blackburn03,
@@ -27395,8 +27395,7 @@ Theory Group (Formerly: E1071), TU Wien},
   title =        {State Legislative Election Returns, 1967-2016:
                   Restructured For Use},
   year =         {2018},
-  doi =          {10.7910/DVN/DRSACA},
-  url =          {https://doi.org/10.7910/DVN/DRSACA}
+  url =          {doi.org/10.7910/DVN/DRSACA}
 }
 @article{CaiChoLiu18,
   title =        {A Reasonable Bias Approach to Gerrymandering: Using
