--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1818,7 +1818,7 @@ pages={1037--1060},
   pages =	 {787--824},
   month =	 11,
   number =	 {4},
-  url =          {http://j.mp/2o46Gkk}
+  url =          {j.mp/2o46Gkk}
 }
 
 @article{King89c,
