--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1971,6 +1971,17 @@ pages={1037--1060},
 % Data
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+@data{KatKinRos19,
+  author =       {Katz, Jonathan N. and Gary, King and Rosenblatt,
+                  Elizabeth},
+  year =         2019,
+  title =        {"Replication Data for: Theoretical Foundations and
+                  Empirical Evaluations of Partisan Fairness in
+                  District-Based Democracies},
+  url =          {doi.org/10.7910/DVN/FTYHPJ},
+  publisher =    {Harvard Dataverse}
+}
+
 @data{ImaKinRiv18,
   author =       {Imai, Kosuke and King, Gary and Velasco Rivera,
                   Carlos},
