--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1975,7 +1975,7 @@ pages={1037--1060},
   author =       {Katz, Jonathan N. and Gary, King and Rosenblatt,
                   Elizabeth},
   year =         2019,
-  title =        {"Replication Data for: Theoretical Foundations and
+  title =        {Replication Data for: Theoretical Foundations and
                   Empirical Evaluations of Partisan Fairness in
                   District-Based Democracies},
   url =          {doi.org/10.7910/DVN/FTYHPJ},
