--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1972,8 +1972,7 @@ pages={1037--1060},
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 @data{KatKinRos19,
-  author =       {Katz, Jonathan N. and Gary, King and Rosenblatt,
-                  Elizabeth},
+  author =       {Jonathan N. Katz and Gary King and Elizabeth Rosenblatt},
   year =         2019,
   title =        {Replication Data for: Theoretical Foundations and
                   Empirical Evaluations of Partisan Fairness in
