--- a/gk.bib
+++ b/gk.bib
@@ -27801,3 +27801,10 @@ Theory Group (Formerly: E1071), TU Wien},
   journal =      {Gill v Whitford, 585 US (2018)},
   year =         2018
   }
+@inproceedings{Sheffet2017,
+  title={Differentially private ordinary least squares},
+  author={Sheffet, Or},
+  booktitle={Proceedings of the 34th International Conference on Machine Learning-Volume 70},
+  pages={3105--3114},
+  year={2017}
+}
