--- a/gk.bib
+++ b/gk.bib
@@ -27808,3 +27808,10 @@ Theory Group (Formerly: E1071), TU Wien},
   pages={3105--3114},
   year={2017}
 }
+@inproceedings{WilMcS10,
+  title =        {Probabilistic inference and differential privacy},
+  author =       {Williams, Oliver and McSherry, Frank},
+  booktitle =    {Advances in Neural Information Processing Systems},
+  pages =        {2451--2459},
+  year =         {2010}
+}
