--- a/gk.bib
+++ b/gk.bib
@@ -27815,3 +27815,26 @@ Theory Group (Formerly: E1071), TU Wien},
   pages =        {2451--2459},
   year =         {2010}
 }
+@inproceedings{NisRasSmi07,
+  title =        {Smooth sensitivity and sampling in private data
+                  analysis},
+  author =       {Nissim, Kobbi and Raskhodnikova, Sofya and Smith,
+                  Adam},
+  booktitle =    {Proceedings of the thirty-ninth annual ACM symposium
+                  on Theory of computing},
+  pages =        {75--84},
+  year =         {2007},
+  organization = {ACM}
+}
+@article{KleTalSar14,
+  title =        {A scalable bootstrap for massive data},
+  author =       {Kleiner, Ariel and Talwalkar, Ameet and Sarkar,
+                  Purnamrita and Jordan, Michael I},
+  journal =      {Journal of the Royal Statistical Society: Series B
+                  (Statistical Methodology)},
+  volume =       {76},
+  number =       {4},
+  pages =        {795--816},
+  year =         {2014},
+  publisher =    {Wiley Online Library}
+}
