--- a/gk.bib
+++ b/gk.bib
@@ -27838,3 +27838,20 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2014},
   publisher =    {Wiley Online Library}
 }
+@article{KarVad17,
+  title =        {Finite sample differentially private confidence
+                  intervals},
+  author =       {Karwa, Vishesh and Vadhan, Salil},
+  journal =      {arXiv preprint arXiv:1711.03908},
+  year =         {2017}
+}
+@article{BarReiMac19,
+  title =        {Differentially private significance tests for
+                  regression coefficients},
+  author =       {Barrientos, Andr{\'e}s F and Reiter, Jerome P and
+                  Machanavajjhala, Ashwin and Chen, Yan},
+  journal =      {Journal of Computational and Graphical Statistics},
+  pages =        {1--24},
+  year =         {2019},
+  publisher =    {Taylor \& Francis}
+}
