--- a/gk.bib
+++ b/gk.bib
@@ -27855,3 +27855,49 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2019},
   publisher =    {Taylor \& Francis}
 }
+@inproceedings{GabLimRog16,
+  title =        {Differentially private chi-squared hypothesis
+                  testing: Goodness of fit and independence testing},
+  author =       {Gaboardi, Marco and Lim, Hyun-Woo and Rogers, Ryan M
+                  and Vadhan, Salil P},
+  booktitle =    {ICML'16 Proceedings of the 33rd International
+                  Conference on International Conference on Machine
+                  Learning-Volume 48},
+  year =         {2016},
+  organization = {JMLR}
+}
+@inproceedings{Smith2011,
+  title =        {Privacy-preserving statistical estimation with
+                  optimal convergence rates},
+  author =       {Smith, Adam},
+  booktitle =    {Proceedings of the forty-third annual ACM symposium
+                  on Theory of computing},
+  pages =        {813--822},
+  year =         {2011},
+  organization = {ACM}
+}
+@phdthesis{Wang2019,
+  title =        {On Improving the Utility for Data Analyses Under
+                  Differential Privacy},
+  author =       {Wang, Yue},
+  year =         {2019},
+  school =       {The Pennsylvania State University}
+}
+@article{WanLeeKif2015,
+  title =        {Differentially private hypothesis testing,
+                  revisited},
+  author =       {Wang, Yue and Lee, Jaewoo and Kifer, Daniel},
+  journal =      {arXiv preprint arXiv:1511.03376},
+  volume =       {1},
+  year =         {2015}
+}
+@article{WasZho2010,
+  title =        {A statistical framework for differential privacy},
+  author =       {Wasserman, Larry and Zhou, Shuheng},
+  journal =      {Journal of the American Statistical Association},
+  volume =       {105},
+  number =       {489},
+  pages =        {375--389},
+  year =         {2010},
+  publisher =    {Taylor \& Francis}
+}
