--- a/gk.bib
+++ b/gk.bib
@@ -27901,3 +27901,14 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2010},
   publisher =    {Taylor \& Francis}
 }
+@article{DwoRot2014,
+  title =        {The algorithmic foundations of differential privacy},
+  author =       {Dwork, Cynthia and Roth, Aaron and others},
+  journal =      {Foundations and Trends{\textregistered} in
+                  Theoretical Computer Science},
+  volume =       {9},
+  number =       {3--4},
+  pages =        {211--407},
+  year =         {2014},
+  publisher =    {Now Publishers, Inc.}
+}
