--- a/gk.bib
+++ b/gk.bib
@@ -27771,14 +27771,16 @@ Theory Group (Formerly: E1071), TU Wien},
   year={2016}
 } 
 @article{BarReiMac19,
-  author = {F, Barrientos Andr{\'e}s and P, Reiter Jerome and Ashwin, Machanavajjhala and    Yan, Chen},
-  title = {{Differentially Private Significance Tests for Regression Coefficients}},
-  journal = {Journal of Computational and Graphical Statistics},
-  year = {2019},
-  volume = {0},
-  number = {0},
-  pages = {1--24},
-  month = jul
+  author =       {F, Barrientos Andr{\'e}s and P, Reiter Jerome and
+                  Ashwin, Machanavajjhala and Yan, Chen},
+  title =        {{Differentially Private Significance Tests for
+                  Regression Coefficients}},
+  journal =      {Journal of Computational and Graphical Statistics},
+  year =         {2019},
+  volume =       {0},
+  number =       {0},
+  pages =        {1--24},
+  month =        jul
 }
 @article{DorHonKin15,
   title={Differential privacy for social science inference},
@@ -27844,16 +27846,6 @@ Theory Group (Formerly: E1071), TU Wien},
   author =       {Karwa, Vishesh and Vadhan, Salil},
   journal =      {arXiv preprint arXiv:1711.03908},
   year =         {2017}
-}
-@article{BarReiMac19,
-  title =        {Differentially private significance tests for
-                  regression coefficients},
-  author =       {Barrientos, Andr{\'e}s F and Reiter, Jerome P and
-                  Machanavajjhala, Ashwin and Chen, Yan},
-  journal =      {Journal of Computational and Graphical Statistics},
-  pages =        {1--24},
-  year =         {2019},
-  publisher =    {Taylor \& Francis}
 }
 @inproceedings{GabLimRog16,
   title =        {Differentially private chi-squared hypothesis
