--- a/gk.bib
+++ b/gk.bib
@@ -27763,8 +27763,8 @@ Theory Group (Formerly: E1071), TU Wien},
   year={2016}
 } 
 @article{BarReiMac19,
-  author =       {F, Barrientos Andr{\'e}s and P, Reiter Jerome and
-                  Ashwin, Machanavajjhala and Yan, Chen},
+  author =       {Barrientos, Andr{\'e}s F. and Jerome Reiter and
+                  Machanavajjhala Ashwin and Yan Chen},
   title =        {{Differentially Private Significance Tests for
                   Regression Coefficients}},
   journal =      {Journal of Computational and Graphical Statistics},
