--- a/gk.bib
+++ b/gk.bib
@@ -27888,7 +27888,7 @@ Theory Group (Formerly: E1071), TU Wien},
 @article{DwoRot2014,
   title =        {The algorithmic foundations of differential privacy},
   author =       {Dwork, Cynthia and Roth, Aaron and others},
-  journal =      {Foundations and Trends{\textregistered} in
+  journal =      {Foundations and Trends in
                   Theoretical Computer Science},
   volume =       {9},
   number =       {3--4},
