--- a/gk.bib
+++ b/gk.bib
@@ -27887,7 +27887,7 @@ Theory Group (Formerly: E1071), TU Wien},
 }
 @article{DwoRot2014,
   title =        {The algorithmic foundations of differential privacy},
-  author =       {Dwork, Cynthia and Roth, Aaron and others},
+  author =       {Dwork, Cynthia and Roth, Aaron},
   journal =      {Foundations and Trends in
                   Theoretical Computer Science},
   volume =       {9},
