--- a/gk.bib
+++ b/gk.bib
@@ -27896,3 +27896,23 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2014},
   publisher =    {Now Publishers, Inc.}
 }
+@inproceedings{DwoMcSNis06,
+  title =        {Calibrating noise to sensitivity in private data
+                  analysis},
+  author =       {Dwork, Cynthia and McSherry, Frank and Nissim, Kobbi
+                  and Smith, Adam},
+  booktitle =    {Theory of cryptography conference},
+  pages =        {265--284},
+  year =         {2006},
+  organization = {Springer}
+}
+@inproceedings{Mironov2017,
+  title =        {R{\'e}nyi differential privacy},
+  author =       {Mironov, Ilya},
+  booktitle =    {2017 IEEE 30th Computer Security Foundations
+                  Symposium (CSF)},
+  pages =        {263--275},
+  year =         {2017},
+  organization = {IEEE}
+}
+
