--- a/gk.bib
+++ b/gk.bib
@@ -27915,4 +27915,28 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2017},
   organization = {IEEE}
 }
-
+@article{DwoFelHar2015,
+  title =        {The reusable holdout: Preserving validity in
+                  adaptive data analysis},
+  author =       {Dwork, Cynthia and Feldman, Vitaly and Hardt, Moritz
+                  and Pitassi, Toniann and Reingold, Omer and Roth,
+                  Aaron},
+  journal =      {Science},
+  volume =       {349},
+  number =       {6248},
+  pages =        {636--638},
+  year =         {2015}
+}
+@article{WooAltBem2018,
+  title =        {Differential Privacy: A Primer for a Non-Technical
+                  Audience},
+  author =       {Wood, Alexandra and Altman, Micah and Bembenek,
+                  Aaron and Bun, Mark and Gaboardi, Marco and Honaker,
+                  James and Nissim, Kobbi and O'Brien, David R and
+                  Steinke, Thomas and Vadhan, Salil},
+  journal =      {Vand. J. Ent. \& Tech. L.},
+  volume =       {21},
+  pages =        {209},
+  year =         {2018},
+  publisher =    {HeinOnline}
+}
