--- a/gk.bib
+++ b/gk.bib
@@ -27940,3 +27940,13 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2018},
   publisher =    {HeinOnline}
 }
+@article{DwoSmiSte2016,
+  title =        {Exposed! a survey of attacks on private data},
+  author =       {Dwork, Cynthia and Smith, Adam and Steinke, Thomas
+                  and Ullman, Jonathan},
+  journal =      {Annual Review of Statistics and Its Application},
+  volume =       {4},
+  pages =        {61--84},
+  year =         {2017},
+  publisher =    {Annual Reviews}
+}
