--- a/gk.bib
+++ b/gk.bib
@@ -27950,3 +27950,14 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2017},
   publisher =    {Annual Reviews}
 }
+@article{Sweeney1997,
+  title =        {Weaving technology and policy together to maintain
+                  confidentiality},
+  author =       {Sweeney, Latanya},
+  journal =      {The Journal of Law, Medicine \& Ethics},
+  volume =       {25},
+  number =       {2-3},
+  pages =        {98--110},
+  year =         {1997},
+  publisher =    {SAGE Publications Sage CA: Los Angeles, CA}
+}
