--- a/gk.bib
+++ b/gk.bib
@@ -27961,3 +27961,12 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {1997},
   publisher =    {SAGE Publications Sage CA: Los Angeles, CA}
 }
+@article{DwoUll2018,
+  title =        {The fienberg problem: How to allow human interactive
+                  data analysis in the age of differential privacy},
+  author =       {Dwork, Cynthia and Ullman, Jonathan},
+  journal =      {Journal of Privacy and Confidentiality},
+  volume =       {8},
+  number =       {1},
+  year =         {2018}
+}
