--- a/gk.bib
+++ b/gk.bib
@@ -27970,3 +27970,10 @@ Theory Group (Formerly: E1071), TU Wien},
   number =       {1},
   year =         {2018}
 }
+@book{PolRom99,
+  title =        {Subsampling},
+  author =       {Politis, Dimitris N and Romano, Joseph P and Wolf,
+                  Michael},
+  year =         {1999},
+  publisher =    {Springer Science \& Business Media}
+}
