--- a/gk.bib
+++ b/gk.bib
@@ -27977,3 +27977,11 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {1999},
   publisher =    {Springer Science \& Business Media}
 }
+
+@article{WanKifLee2018,
+  title =        {Differentially Private Confidence Intervals for
+                  Empirical Risk Minimization},
+  author =       {Wang, Yue and Kifer, Daniel and Lee, Jaewoo},
+  journal =      {arXiv preprint arXiv:1804.03794},
+  year =         {2018}
+}
