--- a/gk.bib
+++ b/gk.bib
@@ -27985,3 +27985,11 @@ Theory Group (Formerly: E1071), TU Wien},
   journal =      {arXiv preprint arXiv:1804.03794},
   year =         {2018}
 }
+@incollection{Vadhan2017,
+  title =        {The complexity of differential privacy},
+  author =       {Vadhan, Salil},
+  booktitle =    {Tutorials on the Foundations of Cryptography},
+  pages =        {347--450},
+  year =         {2017},
+  publisher =    {Springer}
+}
