--- a/gk.bib
+++ b/gk.bib
@@ -27993,3 +27993,36 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2017},
   publisher =    {Springer}
 }
+@article{Warner65,
+  title =        {Randomized response: A survey technique for
+                  eliminating evasive answer bias},
+  author =       {Warner, Stanley L},
+  journal =      {Journal of the American Statistical Association},
+  volume =       {60},
+  number =       {309},
+  pages =        {63--69},
+  year =         {1965},
+  publisher =    {Taylor \& Francis}
+}
+@article{BlaImaZho15,
+  title =        {Design and analysis of the randomized response
+                  technique},
+  author =       {Blair, Graeme and Imai, Kosuke and Zhou, Yang-Yang},
+  journal =      {Journal of the American Statistical Association},
+  volume =       {110},
+  number =       {511},
+  pages =        {1304--1319},
+  year =         {2015},
+  publisher =    {Taylor \& Francis}
+}
+@article{Glynn2013,
+  title =        {What can we learn with statistical truth serum?
+                  Design and analysis of the list experiment},
+  author =       {Glynn, Adam N},
+  journal =      {Public Opinion Quarterly},
+  volume =       {77},
+  number =       {S1},
+  pages =        {159--172},
+  year =         {2013},
+  publisher =    {Oxford University Press UK}
+}
