--- a/gk.bib
+++ b/gk.bib
@@ -28026,3 +28026,14 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2013},
   publisher =    {Oxford University Press UK}
 }
+@article{Monogan2015,
+  title =        {Research preregistration in political science: The
+                  case, counterarguments, and a response to critiques},
+  author =       {Monogan, James E},
+  journal =      {PS: Political Science \& Politics},
+  volume =       {48},
+  number =       {3},
+  pages =        {425--429},
+  year =         {2015},
+  publisher =    {Cambridge University Press}
+}
