--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -219,14 +219,10 @@
   title =        {A Unified Approach to Measurement Error and Missing
                   Data: Overview},
   journal =      {Sociological Methods and Research},
-  year =         {2015},
-  OPTkey =       {},
-  OPTvolume =    {},
-  OPTnumber =    {},
-  OPTpages =     {},
-  OPTmonth =     {},
-  OPTnote =      {},
-  OPTannote =    {}
+  year =         2017,
+  volume =       46,
+  number =       3,
+  pages =        {303-341}
 }
 @Article{BlaHonKin15b,
   author =       {Matthew Blackwell and James Honaker and Gary King},
