--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -71,7 +71,7 @@
   publisher =	 {Princeton University Press},
   year =	 {1994},
   address =	 {Princeton},
-  note =	 {{http://www.pupress.princeton.edu/titles/5458.html}}
+  url =	 {http://bit.ly/2kWIb9G}
 }
 
 @book{King89,
@@ -1124,14 +1124,14 @@ pages={1037--1060},
 }
 
 @article{KinZen02b,
-  author =	 {Gary King and Langche Zeng},
-  title =	 {Estimating Risk and Rate Levels, Ratios, and
+  author =       {Gary King and Langche Zeng},
+  title =        {Estimating Risk and Rate Levels, Ratios, and
                   Differences in Case-Control Studies},
-  journal =	 {Statistics in Medicine},
-  volume =	 21,
-  year =	 2002,
-  pages =	 {1409--1427},
-  note =	 {{http://gking.harvard.edu/files/abs/1s-abs.shtml}}
+  journal =      {Statistics in Medicine},
+  volume =       21,
+  year =         2002,
+  pages =        {1409--1427},
+  url =          {bit.ly/estrrCC}
 }
 
 @article{MurKinLop02,
