--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -71,7 +71,7 @@
   publisher =	 {Princeton University Press},
   year =	 {1994},
   address =	 {Princeton},
-  url =	 {http://bit.ly/2kWIb9G}
+  url =	 {bit.ly/gKroKsV}
 }
 
 @book{King89,
