--- a/gk.bib
+++ b/gk.bib
@@ -27769,10 +27769,8 @@ Theory Group (Formerly: E1071), TU Wien},
                   Regression Coefficients}},
   journal =      {Journal of Computational and Graphical Statistics},
   year =         {2019},
-  volume =       {0},
-  number =       {0},
   pages =        {1--24},
-  month =        jul
+  month =        7
 }
 @article{DorHonKin15,
   title={Differential privacy for social science inference},
