--- a/gk.bib
+++ b/gk.bib
@@ -19111,12 +19111,12 @@ address = {Chicago, IL}
 
 @article{Stefanski00,
 	author = {Stefanski, L. A.},
-	title = {{Measurement Error Models}},
-	journal = {{Journal of the American Statistical Association}},
-	volume = {{95}},
-	number = {{452}},
+	title = {Measurement Error Models},
+	journal = {Journal of the American Statistical Association},
+	volume = {95},
+	number = {452},
 	pages = {1353--1358},
-	year = {{2000}}
+	year = {2000}
 }
 
 @article{BroVal96,
