--- a/gk.bib
+++ b/gk.bib
@@ -19116,7 +19116,7 @@ address = {Chicago, IL}
 	volume = {95},
 	number = {452},
 	pages = {1353--1358},
-	year = {2000}
+	year = 2000
 }
 
 @article{BroVal96,
