--- a/gk.bib
+++ b/gk.bib
@@ -28035,3 +28035,15 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2015},
   publisher =    {Cambridge University Press}
 }
+@article{GueNagTuc2019,
+  title =        {Less than you think: Prevalence and predictors of
+                  fake news dissemination on Facebook},
+  author =       {Guess, Andrew and Nagler, Jonathan and Tucker,
+                  Joshua},
+  journal =      {Science advances},
+  volume =       {5},
+  number =       {1},
+  pages =        {eaau4586},
+  year =         {2019},
+  publisher =    {American Association for the Advancement of Science}
+}
