--- a/gk.bib
+++ b/gk.bib
@@ -28047,3 +28047,10 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2019},
   publisher =    {American Association for the Advancement of Science}
 }
+@inproceedings{HaePieNar11,
+  title =        {Differential Privacy Under Fire.},
+  author =       {Haeberlen, Andreas and Pierce, Benjamin C and
+                  Narayan, Arjun},
+  booktitle =    {USENIX Security Symposium},
+  year =         {2011}
+}
