--- a/gk.bib
+++ b/gk.bib
@@ -28054,3 +28054,13 @@ Theory Group (Formerly: E1071), TU Wien},
   booktitle =    {USENIX Security Symposium},
   year =         {2011}
 }
+@inproceedings{CarLiuErl2019,
+  title =        {The Secret Sharer: Evaluating and testing unintended
+                  memorization in neural networks},
+  author =       {Carlini, Nicholas and Liu, Chang and Erlingsson,
+                  {\'U}lfar and Kos, Jernej and Song, Dawn},
+  booktitle =    {28th $\{$USENIX$\}$ Security Symposium
+                  ($\{$USENIX$\}$ Security 19)},
+  pages =        {267--284},
+  year =         {2019}
+}
