--- a/gk.bib
+++ b/gk.bib
@@ -28064,3 +28064,11 @@ Theory Group (Formerly: E1071), TU Wien},
   pages =        {267--284},
   year =         {2019}
 }
+@inproceedings{BarEva2019,
+  title =        {Evaluating Differentially Private Machine Learning
+                  in Practice},
+  author =       {Jayaraman, Bargav and Evans, David},
+  booktitle =    {28th USENIX Security Symposium (USENIX Security 19).
+                  Santa Clara, CA: USENIX Association},
+  year =         {2019}
+}
