--- a/gk.bib
+++ b/gk.bib
@@ -27646,17 +27646,6 @@ Theory Group (Formerly: E1071), TU Wien},
   organization={ACM}
 }
 
-@article{WasZho10,
-  title={A statistical framework for differential privacy},
-  author={Wasserman, Larry and Zhou, Shuheng},
-  journal={Journal of the American Statistical Association},
-  volume={105},
-  number={489},
-  pages={375--389},
-  year={2010},
-  publisher={Taylor \& Francis}
-}
-
 @article{XiaWanGeh11,
   title={Differential privacy via wavelet transforms},
   author={Xiao, Xiaokui and Wang, Guozhang and Gehrke, Johannes},
@@ -28071,4 +28060,13 @@ Theory Group (Formerly: E1071), TU Wien},
   booktitle =    {28th USENIX Security Symposium (USENIX Security 19).
                   Santa Clara, CA: USENIX Association},
   year =         {2019}
+}
+@article{Wasserman2012,
+  title =        {Minimaxity, statistical thinking and differential
+                  privacy},
+  author =       {Wasserman, Larry},
+  journal =      {Journal of Privacy and Confidentiality},
+  volume =       {4},
+  number =       {1},
+  year =         {2012}
 }
