--- a/gk.bib
+++ b/gk.bib
@@ -28070,3 +28070,12 @@ Theory Group (Formerly: E1071), TU Wien},
   number =       {1},
   year =         {2012}
 }
+@inproceedings{BunSti2016,
+  title =        {Concentrated differential privacy: Simplifications,
+                  extensions, and lower bounds},
+  author =       {Bun, Mark and Steinke, Thomas},
+  booktitle =    {Theory of Cryptography Conference},
+  pages =        {635--658},
+  year =         {2016},
+  organization = {Springer}
+}
