--- a/gk.bib
+++ b/gk.bib
@@ -28070,7 +28070,7 @@ Theory Group (Formerly: E1071), TU Wien},
   number =       {1},
   year =         {2012}
 }
-@inproceedings{BunSti2016,
+@inproceedings{BunSte2016,
   title =        {Concentrated differential privacy: Simplifications,
                   extensions, and lower bounds},
   author =       {Bun, Mark and Steinke, Thomas},
