--- a/gk.bib
+++ b/gk.bib
@@ -28079,3 +28079,9 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2016},
   organization = {Springer}
 }
+@book{Wasserman2006,
+  title =        {All of nonparametric statistics},
+  author =       {Wasserman, Larry},
+  year =         {2006},
+  publisher =    {Springer Science \& Business Media}
+}
