--- a/gk.bib
+++ b/gk.bib
@@ -28085,3 +28085,21 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2006},
   publisher =    {Springer Science \& Business Media}
 }
+@article{KinGebMel2019,
+  author =       {King, Ella and Gebbie, Matthew and Melosh, Nicholas
+                  A},
+  title =        {Impact of Rigidity on Molecular Self-Assembly},
+  journal =      {Langmuir: The ACS Journal of Fundamental Inferface Science},
+  year =         {2019},
+  doi =          {10.1021/acs.langmuir.9b01824},
+  note =         {PMID: 31610658},
+  URL =          {https://doi.org/10.1021/acs.langmuir.9b01824},
+  eprint =       {https://doi.org/10.1021/acs.langmuir.9b01824}
+}
+@book{Roberts2018,
+  title =        {Censored: distraction and diversion inside China's
+                  Great Firewall},
+  author =       {Roberts, Margaret E},
+  year =         {2018},
+  publisher =    {Princeton University Press}
+}
