--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2629,3 +2629,10 @@ pages={1037--1060},
   doi =          {10.7910/DVN/A9LZNV},
   url =          {https://doi.org/10.7910/DVN/A9LZNV}
 }
+@article {KinPer2019,
+	title = {A New Model for Industry-Academic Partnerships},
+	journal = {PS: Political Science and Politics},
+	year = {2019},
+	url = {GaryKing.org/partnerships},
+	author = {Gary King and Nathaniel Persily}
+}
