--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2632,7 +2632,7 @@ pages={1037--1060},
 @article {KinPer2019,
 	title = {A New Model for Industry-Academic Partnerships},
 	journal = {PS: Political Science and Politics},
-	year = {2019},
+	year = {In press},
 	url = {GaryKing.org/partnerships},
 	author = {Gary King and Nathaniel Persily}
 }
