--- a/gk.bib
+++ b/gk.bib
@@ -28103,3 +28103,10 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2018},
   publisher =    {Princeton University Press}
 }
+@article{ErlMirRag2019,
+  title =        {That which we call private},
+  author =       {Erlingsson, {\'U}lfar and Mironov, Ilya and
+                  Raghunathan, Ananth and Song, Shuang},
+  journal =      {arXiv preprint arXiv:1908.03566},
+  year =         {2019}
+}
