--- a/gk.bib
+++ b/gk.bib
@@ -28091,8 +28091,7 @@ Theory Group (Formerly: E1071), TU Wien},
   title =        {Impact of Rigidity on Molecular Self-Assembly},
   journal =      {Langmuir: The ACS Journal of Fundamental Inferface Science},
   year =         {2019},
-  note =         {PMID: 31610658},
-  URL =          {https://doi.org/10.1021/acs.langmuir.9b01824}
+  note =         {PMID: 31610658}
 }
 @book{Roberts2018,
   title =        {Censored: distraction and diversion inside China's
