--- a/gk.bib
+++ b/gk.bib
@@ -28107,3 +28107,12 @@ Theory Group (Formerly: E1071), TU Wien},
   journal =      {arXiv preprint arXiv:1908.03566},
   year =         {2019}
 }
+@inproceedings{MohThaShi2012,
+  title =        {GUPT: privacy preserving data analysis made easy},
+  author =       {Mohan, Prashanth and Thakurta, Abhradeep and Shi,
+                  Elaine and Song, Dawn and Culler, David},
+  booktitle =    {Proceedings of the 2012 ACM SIGMOD International
+                  Conference on Management of Data},
+  pages =        {349--360},
+  year =         {2012}
+}
