--- a/gk.bib
+++ b/gk.bib
@@ -28116,3 +28116,32 @@ Theory Group (Formerly: E1071), TU Wien},
   pages =        {349--360},
   year =         {2012}
 }
+@article{TanKorBai2017,
+  title =        {Privacy loss in apple's implementation of
+                  differential privacy on macos 10.12},
+  author =       {Tang, Jun and Korolova, Aleksandra and Bai, Xiaolong
+                  and Wang, Xueqiang and Wang, Xiaofeng},
+  journal =      {arXiv preprint arXiv:1709.02753},
+  year =         {2017}
+}
+@inproceedings{GarAboPow2018,
+  title =        {Issues encountered deploying differential privacy},
+  author =       {Garfinkel, Simson L and Abowd, John M and Powazek,
+                  Sarah},
+  booktitle =    {Proceedings of the 2018 Workshop on Privacy in the
+                  Electronic Society},
+  pages =        {133--137},
+  year =         {2018},
+  organization = {ACM}
+}
+@inproceedings{ErlPihKor2014,
+  title =        {Rappor: Randomized aggregatable privacy-preserving
+                  ordinal response},
+  author =       {Erlingsson, {\'U}lfar and Pihur, Vasyl and Korolova,
+                  Aleksandra},
+  booktitle =    {Proceedings of the 2014 ACM SIGSAC conference on
+                  computer and communications security},
+  pages =        {1054--1067},
+  year =         {2014},
+  organization = {ACM}
+}
